nui/SimpleNotification/notification.css
@keyframes insert-left {
    from {
        transform: rotateY(-70deg);
        transform-origin: left;
    }

    to {
        transform: rotateY(0deg);
        transform-origin: left;
    }
}

@keyframes insert-top {
    from {
        transform: rotateX(70deg);
        transform-origin: top;
    }

    to {
        transform: rotateX(0deg);
        transform-origin: top;
    }
}

@keyframes insert-bottom {
    from {
        transform: rotateX(-70deg);
        transform-origin: bottom;
    }

    to {
        transform: rotateX(0deg);
        transform-origin: bottom;
    }
}

@keyframes insert-right {
    from {
        transform: rotateY(-70deg);
        transform-origin: right;
    }

    to {
        transform: rotateY(0deg);
        transform-origin: right;
    }
}

@keyframes fadein {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes fadeout {
    from {
        opacity: 1;
    }

    to {
        opacity: 0;
    }
}

@keyframes scalein {
    from {
        transform: scale(0);
    }

    to {
        transform: scale(1);
    }
}

@keyframes scaleout {
    from {
        transform: scale(1);
    }

    to {
        transform: scale(0);
    }
}

@keyframes rotatein {
    from {
        transform: rotate(0) scale(0);
    }

    to {
        transform: rotate(360deg) scale(1);
    }
}

@keyframes rotateout {
    from {
        transform: rotate(0) scale(1);
    }

    to {
        transform: rotate(-360deg) scale(0);
    }
}

@keyframes shorten {
    from {
        width: 100%;
    }

    to {
        width: 0;
    }
}

.gn-wrapper {
    position: fixed;
    pointer-events: none;
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    z-index: 1080;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.gn-top-right,
.gn-bottom-right {
    align-items: flex-end;
}

.gn-bottom-right {
    justify-content: flex-end;
}

.gn-top-left,
.gn-bottom-left {
    align-items: flex-start;
}

.gn-bottom-left {
    justify-content: flex-end;
}

.gn-top-center,
.gn-bottom-center {
    align-items: center;
}

.gn-top-center {
    justify-content: flex-start;
}

.gn-bottom-center {
    justify-content: flex-end;
}

.gn-middle-left {
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
}

.gn-middle-right {
    justify-content: center;
    align-items: flex-end;
    flex-direction: column;
}

.gn-notification {
    flex-shrink: 0;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    box-shadow: 1px 1px 3px black;
    border-radius: 3px;
    overflow: hidden;
    margin: 1rem;
    cursor: default;
    pointer-events: all;
    min-width: 10rem;
    max-width: 25rem;
    position: relative;
    transition: background-color 0.2s ease-in-out;
}

.gn-insert {
    animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1);
    animation-fill-mode: forwards;
}

.gn-close-on-click {
    cursor: pointer;
}

.gn-close {
    position: absolute;
    top: 0;
    right: 0;
    font-size: 1rem;
    padding: 0.5rem;
    border-left: 1px solid rgba(0, 0, 0, 0.4);
    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
    border-bottom-left-radius: 3px;
    background: rgba(0, 0, 0, 0.2);
    opacity: 0;
    transition: all 100ms ease-in;
    cursor: pointer;
    user-select: none;
    -moz-user-select: none;
}

.gn-notification:hover .gn-close {
    opacity: 1;
}

.gn-close:hover {
    background: rgba(0, 0, 0, 0.6);
}

.gn-close.gn-close-title {
    display: flex;
    align-items: center;
    bottom: 0;
    border-bottom: 0;
    border-bottom-left-radius: 0;
}

.gn-notification>h1 {
    background-color: rgba(0, 0, 0, 0.2);
    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
    overflow: hidden;
    text-overflow: ellipsis;
    position: relative;
}

.gn-remove {
    animation-timing-function: linear;
    animation-fill-mode: forwards;
}

.gn-lifespan {
    display: block;
    height: 3px;
    width: 100%;
    background-color: #4dd0e1;
    transition: height 0.4s ease-in-out, width 0s linear;
}

.gn-extinguish {
    animation-duration: 1000ms;
    animation-name: shorten;
    animation-timing-function: linear;
    animation-fill-mode: forwards;
}

.gn-lifespan.gn-retire {
    height: 0px;
}

.gn-success {
    background-color: #689f38;
    color: white;
}

.gn-info {
    background-color: #0288d1;
    color: white;
}

.gn-error {
    background-color: #b42f2d;
    color: white;
}

.gn-warning {
    background-color: #d87a00;
    color: white;
}

.gn-message {
    background-color: #333333;
    color: white;
}

.gn-content {
    display: flex;
    flex: 1;
    align-content: space-between;
    align-items: center;
}

.gn-content>img {
    max-width: 30%;
    max-height: 20rem;
    flex-shrink: 0;
}

.gn-content .gn-text {
    max-width: 100%;
    word-break: break-word;
}

.gn-content>img:only-child,
.gn-content .gn-text:only-child {
    max-width: 100%;
}

.gn-notification>h1,
.gn-content .gn-text {
    padding: 0.5rem;
    margin: 0;
    width: 100%;
}

.gn-content .gn-text a {
    color: rgba(255, 255, 255, 0.8);
    transition: all 0.2s ease-in-out;
}

.gn-content .gn-text a:hover {
    text-shadow: 1px 0 1px rgba(255, 255, 255, 0.8);
    border-radius: 2px;
}

.gn-content .gn-text h1,
.gn-content .gn-text h2 {
    margin: 0.5rem 0;
}

.gn-content .gn-text h1 {
    font-size: 1.2rem;
}

.gn-content .gn-text h2 {
    font-size: 1.1rem;
}

.gn-content .gn-text img {
    height: auto;
    max-width: 100%;
    margin: 0.1rem 0;
}

.gn-bold {
    font-weight: bold;
}

.gn-italic {
    font-style: italic;
}

.gn-red {
    color: red;
}

.gn-green {
    color: green;
}

.gn-yellow {
    color: yellow;
}

.gn-blue {
    color: blue
}

.gn-cyan {
    color: cyan;
}

.gn-purple {
    color: purple;
}

.gn-orange {
    color: orange;
}

.gn-gray {
    color: gray;
}

.gn-white {
    color: white
}

.gn-code {
    font-family: SFMono-Regular, Menlo, 'Lucida Console', Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
    padding: 0.1rem 0.2rem;
    background-color: #333333;
    color: #f7f7f7;
    line-height: 1.4;
    border-radius: 2px;
    box-shadow: 0 0 1px #333333;
}

.gn-message .gn-code {
    background-color: #4d4d4d;
    box-shadow: 0 0 1px #4d4d4d;
}

.gn-separator {
    display: block;
    width: 100%;
    border-bottom: 1px solid white;
    border-radius: 4px;
    height: 2px;
    line-height: 0px;
    margin: 0.75rem 0;
}

.gn-buttons {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: stretch;
    align-items: stretch;
    align-content: stretch;
    text-align: center;
    border-top: 1px solid rgba(0, 0, 0, 0.4);
}

.gn-button {
    width: 100%;
    padding: 0.5rem;
    border: 0;
    cursor: pointer;
    border-right: 1px solid rgba(0, 0, 0, 0.4);
    transition: all 0.1s ease-in;
    font-size: 1rem;
}

.gn-button:hover {
    background: rgba(0, 0, 0, 0.6);
}

.gn-button:disabled {
    background: rgba(0, 0, 0, 0.6);
    filter: grayscale(60%);
}

.gn-button:last-child {
    border-right: 0;
}

.gn-float-right {
    float: right;
}

.gn-icon {
    margin-left: 0.5rem;
}

